--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "react-admin-system",
+  "name": "react-pc-142",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "antd": "^4.19.0",
+    "axios": "^0.26.0",
+    "echarts": "^5.3.1",
+    "history": "^5.3.0",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "source-map-explorer": "^2.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "report": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.4.3",
+    "sass": "^1.49.9"
   }
 }
